--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "reactstrap": "^8.7.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
