--- a/web/package.json
+++ b/web/package.json
@@ -33,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "eslintConfig": {
     "extends": "react-app"
